# PrismVLA

./: .gitignore  AGENTS.md  LICENSE  README.md  environment.yml  pyproject.toml  reconstruct.md
.github/workflows/: tests.yml
configs/data/: calvin.yaml  libero.yaml
configs/experiment/: calvin_eval.yaml  calvin_smoke.yaml  calvin_stage1.yaml  calvin_warmup_w4.yaml  libero_eval.yaml  libero_smoke.yaml  libero_stage1.yaml  libero_train_smoke.yaml  libero_warmup_w4.yaml
configs/model/: prism_base.yaml  prism_smoke.yaml  qwen35_query_memory.yaml
configs/train/: calvin_baseline.yaml  calvin_smoke.yaml  libero_baseline.yaml  libero_smoke.yaml
docs/: engineering.md  environment.md  interview_project_overview.md  training.md  training_plan.md
docs/benchmarks/: benchmark_plan.md  benchmark_research_report_2026-06-23.md  calvin_contract.md  runtime.md
docs/data/: lerobot_protocol_audit_2026-07-13.md
docs/design/: action_head.md  bridge_himem.md  memory_and_planner.md  prism_architecture_redesign.md  qwen35_query_bridge_baseline.md
docs/research/: vla_adapter_notes.md  vla_survey_2026h1.md
docs/training/: libero_recipe.md  starvla_libero_recipe.md
docs/verification/: cpu_distributed_loss_verification_2026-07-14.md
examples/: libero_quickstart.md  train_eval_smoke.md
experiments/calvin/: config.py  data.py  eval.py  run_eval.sh
experiments/libero/: config.py  data.py  eval.py  run_eval.sh
prism/: __init__.py  config.py  config_bridge.py  config_experiment.py  config_loader.py  config_runtime.py  config_training.py  schema.py
prism/data/: __init__.py  benchmark_contracts.py  cache.py  cache_utils.py  calvin.py  dataset.py  lerobot.py  libero.py  memory_replay.py  normalization.py  replay_dataset.py  replay_frames.py  schema.py  segments.py  smoke.py  statistics.py  token_cache_build.py  token_cache_core.py  token_cache_dataset.py  token_cache_io.py
prism/eval/: __init__.py  action_response.py  calvin.py  calvin_action_protocol.py  calvin_config.py  calvin_eval_summary.py  calvin_history.py  calvin_observation.py  calvin_request_builder.py  calvin_runner.py  calvin_spec.py  libero.py  metadata.py  profiles.py  runner.py
prism/models/: __init__.py  action_autoencoder.py  action_head.py  batch.py  bridge_adapter.py  bridge_attention.py  config.py  factory.py  flow_matching_head.py  history_qformer.py  memory.py  planner.py  policy.py  query_features.py  query_memory_bridge.py  task_state_planner.py  vlm.py
prism/serve/: __init__.py  backend.py  client.py  engine.py  history.py  loading.py  protocol.py  server.py  wire.py
prism/training/: __init__.py  artifact_io.py  checkpoint.py  checkpoint_metadata.py  checkpointing.py  config.py  distributed.py  entrypoint.py  loggers.py  loss.py  optim.py  optimization.py  preprocessing.py  runner.py  scheduler.py  stage1.py  stage2_config.py  stage2_data.py  stage2_loop.py  trainer.py  warmup.py
prism/utils/: __init__.py  evaluation.py  git_metadata.py  logging.py  paths.py  result_writer.py  run_metadata.py  seeding.py  yaml_loader.py
requirements/: calvin-eval.lock.txt  libero-eval.lock.txt
scripts/: build_cache.py  check.sh  compute_statistics.py  eval.py  eval_benchmark.sh  materialize_calvin_abc_v21.py  materialize_libero_v21.py  serve.py  serve_policy.py  setup_calvin_eval_env.sh  setup_env.sh  setup_libero_eval_env.sh  train.py  warmup.py
tests/: test_config.py  test_import.py
tests/data/: test_action_segment_targets.py  test_calvin_abc_materialization.py  test_calvin_dataset.py  test_dataset.py  test_lerobot.py  test_libero_materialization.py  test_libero_progress_warmup.py  test_memory_replay.py  test_memory_replay_frames.py  test_mixture_determinism.py  test_normalization.py  test_schema.py  test_statistics.py
tests/eval/: test_benchmark_runner.py  test_calvin_action_protocol.py  test_calvin_client_config.py  test_calvin_eval_summary.py  test_calvin_request_builder.py  test_calvin_runtime_integration.py  test_eval_entrypoints.py  test_history_buffer.py  test_libero_action_protocol.py  test_libero_client_config.py  test_libero_data_protocol.py  test_libero_eval_summary.py  test_libero_runtime_integration.py  test_policy_client.py  test_result_writer.py
tests/models/: test_action_head.py  test_action_segment_autoencoder.py  test_bridge_attention.py  test_flow_matching_config.py  test_perceptual_visual_memory.py  test_progress_state_planner.py  test_query_memory.py  test_qwen35_checkpoint_integration.py  test_task_state_planner.py
(+29 files in other folders)
