[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prismvla"
version = "0.1.0"
description = "PrismVLA research code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy<2",
  "transformers==4.39.0",
  "timm==1.0.27",
  "torch==2.5.1",
  "torchvision==0.20.1",
  "accelerate==1.13.0",
  "einops==0.8.2",
  "diffusers==0.38.0",
  "ninja==1.13.0",
  "pandas==2.3.3",
  "matplotlib==3.10.9",
  "pyarrow==24.0.0",
  "PyYAML==6.0.3",
  "websockets==16.0",
  "opencv-python==4.10.0.84",
  "swanlab==0.8.1",
  "wandb==0.27.2",
  "av==17.1.0",
  "fvcore==0.1.5.post20221221",
]

[project.optional-dependencies]
dev = ["pytest==9.0.3", "ruff==0.15.16"]
libero = ["libero==0.1.0", "robosuite==1.4.1", "mujoco==3.1.6", "imageio==2.37.0", "huggingface_hub==0.36.0"]
calvin = []

[tool.setuptools.packages.find]
where = ["."]
include = ["prism*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["third_party"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = ["E402"]
"tests/**/*.py" = ["E402"]
"prism/config.py" = ["E402", "F811"]
"prism/data/__init__.py" = ["E402", "F811"]
"prism/data/cache.py" = ["E402", "F811"]
"prism/data/calvin.py" = ["E402", "F811"]
"prism/data/libero.py" = ["E402", "F811"]
"prism/eval/calvin.py" = ["E402", "F811"]
"prism/eval/libero.py" = ["E402", "F811"]
"prism/eval/runner.py" = ["E402"]
"prism/models/action_head.py" = ["E402", "F811"]
"prism/models/planner.py" = ["E402", "F811"]
"prism/serve/engine.py" = ["E402", "F811"]
"prism/serve/server.py" = ["E402"]
"prism/training/trainer.py" = ["E402", "F811"]
"prism/training/stage1.py" = ["E402", "F811"]
"prism/training/stage2_config.py" = ["E402", "F811"]
"prism/training/stage2_data.py" = ["E402", "F811"]
"prism/training/stage2_loop.py" = ["E402", "F811"]
"prism/utils/__init__.py" = ["E402"]
