[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prismvla"
version = "0.1.0"
description = "PrismVLA research code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy==1.26.4",
  "transformers==5.13.1",
  "torch==2.5.1",
  "torchvision==0.20.1",
  "einops==0.8.2",
  "pillow==12.3.0",
  "PyYAML==6.0.3",
  "websockets==16.0",
  "msgpack==1.1.2",
]

[project.optional-dependencies]
dev = ["pytest==9.0.3", "ruff==0.15.16"]
data = ["pandas==2.3.3", "pyarrow==24.0.0", "h5py==3.16.0", "av==17.1.0"]
libero = ["libero==0.1.0", "robosuite==1.4.1", "mujoco==3.1.6", "imageio==2.37.0"]
calvin = []

[tool.setuptools.packages.find]
where = ["."]
include = ["prism*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["third_party"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = ["E402"]
"tests/**/*.py" = ["E402"]
"prism/config.py" = ["E402", "F811"]
"prism/data/__init__.py" = ["E402", "F811"]
"prism/data/calvin.py" = ["E402", "F811"]
"prism/data/libero.py" = ["E402", "F811"]
"prism/serve/server.py" = ["E402"]
